src/objects/P_dorys__c.object
<CustomObject>
    <fields>
        <fullName>P_dorys__c</fullName>
        <formula>IMAGE (URL_p_dorysu__c, &quot;&quot; , 300,300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pôdorys</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Typ_p_dorysu__c</fullName>
        <label>Typ pôdorysu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Miestnosti</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_p_dorysu__c</fullName>
        <label>URL pôdorysu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pôdorys</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pôdorys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pôdorysy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>